@@ -1,6 +1,7 @@
 2005-06-14  Vincent Noel  <vnoel@cox.net>
 
 	* userprefs.c: (prefs_create_defaults): Thinko.
+	(prefs_create_defaults): Use gnome-vfs instead of lstat.
 
 2005-06-14  Vincent Noel  <vnoel@cox.net>
 
